src/np222kk/dv507/a2/test/cases/negative/test_attributesaccess_01.ofp
void main() {

    char[] cArr = new char[2];
    int i = cArr.attribute;
}